[gd_scene load_steps=7 format=2]

[ext_resource path="res://objects/Logo.tscn" type="PackedScene" id=1]
[ext_resource path="res://objects/GameOver.gd" type="Script" id=2]
[ext_resource path="res://sprites/ButtonQuitPressed.png" type="Texture" id=3]
[ext_resource path="res://sprites/ButtonQuit.png" type="Texture" id=4]
[ext_resource path="res://sprites/ButtonRestartPressed.png" type="Texture" id=5]
[ext_resource path="res://sprites/ButtonRestart.png" type="Texture" id=6]

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 640.0
margin_bottom = 360.0
color = Color( 0, 0, 0, 0.396078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 640.0
margin_bottom = 130.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" parent="CenterContainer" instance=ExtResource( 1 )]
margin_left = 192.0
margin_top = 27.0
margin_right = 448.0
margin_bottom = 103.0

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_top = 130.0
margin_right = 640.0
margin_bottom = 360.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer2"]
margin_left = 224.0
margin_top = 45.0
margin_right = 416.0
margin_bottom = 185.0
custom_constants/separation = 12
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="TextureButton" parent="CenterContainer2/VBoxContainer"]
margin_right = 192.0
margin_bottom = 64.0
texture_normal = ExtResource( 6 )
texture_focused = ExtResource( 5 )

[node name="Quit" type="TextureButton" parent="CenterContainer2/VBoxContainer"]
margin_top = 76.0
margin_right = 192.0
margin_bottom = 140.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 3 )

[connection signal="pressed" from="CenterContainer2/VBoxContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="CenterContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
